# gojira

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build-windows.yml
docs/: JIRA_INTEGRATION_SUMMARY.md  WSL2_IMPROVEMENTS.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/jira/: auth.rs  client.rs  config_manager.rs  environment.rs  error.rs  mod.rs  secure_storage.rs
src/components/: AppLayout.tsx  AppRouter.tsx
src/components/jira/: JiraConfigForm.tsx  SecurityStatus.tsx
src/components/ui/: CometCard.tsx  LanguageSelector.tsx  ThemeSelector.tsx  sidebar.tsx
src/constants/: index.ts
src/contexts/: LanguageContext.tsx  NavigationContext.tsx  ThemeContext.tsx
src/hooks/: useAppInitialization.ts  useJira.ts  useLocalStorage.ts
src/lib/: i18n.ts
src/locales/: en.ts  pt.ts
src/pages/: Dashboard.tsx  Development.tsx  History.tsx  Monitoring.tsx  Settings.tsx
src/services/: api.ts  jiraService.ts
src/styles/: fonts.css  index.css
src/types/: index.ts  jira.ts
