[package]
name = "gojira"
version = "0.1.0"
description = "Modern desktop application for project management and development tools"
authors = ["Gabriel Griffo"]
repository = "https://github.com/gabrielgriffo/gojira"
homepage = "https://github.com/gabrielgriffo/gojira"
documentation = "https://github.com/gabrielgriffo/gojira#readme"
keywords = ["tauri", "desktop", "development", "tools", "productivity"]
categories = ["development-tools", "gui"]
readme = "../README.md"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gojira_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

