[package]
name = "goji"
version = "0.1.0"
description = "Modern desktop application for project management and development tools"
authors = ["Gabriel Griffo"]
repository = "https://github.com/gabrielgriffo/goji"
homepage = "https://github.com/gabrielgriffo/goji"
documentation = "https://github.com/gabrielgriffo/goji#readme"
keywords = ["tauri", "desktop", "development", "tools", "productivity"]
categories = ["development-tools", "gui"]
readme = "../README.md"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "goji_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "2.0"
aes-gcm = "0.10"
rand = "0.8"
argon2 = "0.5"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"

